--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Interface</title>
 </head>
 <body>
-<h1>Test</h1>
-</body>
-<script type="module">
-    const { app, BrowserWindow } = require('electron')
-    const createWindow = () => {
-        const win = new BrowserWindow({
-            width: 800,
-            height: 600
-        })
+<section>
+    <div>
+        <h3 id="text">Loading..</h3>
+    </div>
 
-        win.loadFile('index.html')
-    }
-</script>
+</section>
+<button id="next-btn" class='pulse-button'></button>
+
+<script src="./assets/js/index.js" type="module" ></script>
+</body>
+
 </html>
