--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <section>
     <div>
-        <h3 id="text">Loading...</h3>
+        <h3 id="text">Loading..</h3>
     </div>
 
 </section>
